--- a/pom.xml
+++ b/pom.xml
@@ -78,5 +78,17 @@
         </dependency>
 
 
- 	</dependencies>
+ 	
+    <dependency>
+      <groupId>org.apache.httpcomponents</groupId>
+      <artifactId>httpclient</artifactId>
+      <version>4.5.9</version>
+    </dependency>
+
+    <dependency>
+    <groupId>org.json</groupId>
+    <artifactId>json</artifactId>
+    <version>20230227</version>
+</dependency>
+  </dependencies>
 </project>
