Bugfixes and still working on the databases

--- a/docker/DockerfileMySQL
+++ b/docker/DockerfileMySQL
@@ -1,4 +1,6 @@
 FROM mysql:5.7.9
 
+
+COPY ./sql/create-products.sql /docker-entrypoint-initdb.d/create-products.sql
+COPY ./sql/create-category.sql /docker-entrypoint-initdb.d/create-category.sql
 COPY ./sql/create-tables.sql /docker-entrypoint-initdb.d/create-tables.sql
-COPY ./sql/initial.sql /docker-entrypoint-initdb.d/initial.sql
