--- a/docker-compose-local.yml
+++ b/docker-compose-local.yml
@@ -19,9 +19,6 @@ services:
       - "./.data/db:/var/lib/mysql"
     environment:
       MYSQL_ROOT_PASSWORD: c8de110f37300a53a971749
-      MYSQL_DATABASE: webshop
-      MYSQL_USER: webshopuser
-      MYSQL_PASSWORD: 240b2c6d58ff2ce2f508b49f
     ports:
       - "3306:3306"
     networks:
@@ -34,9 +31,9 @@ services:
       - "8081:8081"
     environment:
       MYSQL_ADDRESS: "web-shop-db-image:3306"
-      MYSQL_USER: webshopuser
-      MYSQL_PASSWORD: 240b2c6d58ff2ce2f508b49f
-      MYSQL_DATABASE: webshop
+      MYSQL_USER: categoryuser
+      MYSQL_PASSWORD: categoryuser
+      MYSQL_DATABASE: Categories
     networks:
       local_dev_net:
         aliases:
@@ -47,9 +44,9 @@ services:
       - "8082:8082"
     environment:
       MYSQL_ADDRESS: "web-shop-db-image:3306"
-      MYSQL_USER: webshopuser
-      MYSQL_PASSWORD: 240b2c6d58ff2ce2f508b49f
-      MYSQL_DATABASE: webshop
+      MYSQL_USER: productuser
+      MYSQL_PASSWORD: productuser
+      MYSQL_DATABASE: Products
     networks:
       local_dev_net:
         aliases:
